Add container list title and background color in fragment_container_list.xml

--- a/QRganize-android/app/src/main/res/values/strings.xml
+++ b/QRganize-android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">QRganize</string>
     <string name="scan_qr_title">Scan a QR code</string>
+    <string name="container_list_title">Containers</string>
 </resources>
