--- a/QRganize-android/app/src/main/res/values/strings.xml
+++ b/QRganize-android/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">QRganize</string>
     <string name="scan_qr_title">Scan a QR code</string>
     <string name="scan_barcode_title">Scan a Barcode</string>
+    <string name="add_item_button">Add Items Manually</string>
     <string name="container_list_title">Containers</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
